cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedCpp11IdentifierTest/bug220527.cpp
void bug220527_foo() const noexcept {
}
